--- a/sql/liquibase.properties
+++ b/sql/liquibase.properties
@@ -1,10 +1,10 @@
-changeLogFile: ../path/to/file/dbchangelog.xml
+changeLogFile: changelog.xml
 driver: com.mysql.cj.jdbc.Driver
-url: url: jdbc:mysql://<servername>:<port>/<dbname>
+url: jdbc:mysql://<servername>:<port>/<dbname>
 username: PRO
 password: password
-referenceDriver: oracle.jdbc.OracleDriver
-referenceUrl: jdbc:oracle:thin:@192.168.0.22:1521/orcl
+referenceDriver: com.mysql.cj.jdbc.Driver
+referenceUrl: jdbc:mysql://<servername>:<port>/<dbname>
 referencePassword: password
-liquibaseProLicenseKey: aeioufakekey32aeioufakekey785463214
-classpath: ../path/to/file/ojdbc6-11.2.0.3.0.jar
+#liquibaseProLicenseKey: aeioufakekey32aeioufakekey785463214
+#classpath: ../path/to/file/ojdbc6-11.2.0.3.0.jar
