fix path for changelog extension

--- a/sql/liquibase.properties
+++ b/sql/liquibase.properties
@@ -1,4 +1,4 @@
-changeLogFile: changelog.xml
+changeLogFile: changelog.sql
 driver: com.mysql.cj.jdbc.Driver
 url: jdbc:mysql://<servername>:<port>/<dbname>
 username: PRO
