add prop files for all the environments

--- a/sql/qa.liquibase.properties
+++ b/sql/qa.liquibase.properties
@@ -1,8 +1,8 @@
 changeLogFile: ./changelog.sql
 driver: com.mysql.cj.jdbc.Driver
-url: jdbc:mysql://<servername>:<port>/<dbname>
-username: PRO
-password: password
+url: jdbc:mysql://sealights-prod.cuoym6z6de1k.us-east-1.rds.amazonaws.com:3306/sealights
+username: admin
+password: K5NWfomNIyQ86Ijs28zU
 referenceDriver: com.mysql.cj.jdbc.Driver
 referenceUrl: jdbc:mysql://<servername>:<port>/<dbname>
 referencePassword: password
