get pathing right for liquibase

--- a/sql/qa.liquibase.properties
+++ b/sql/qa.liquibase.properties
@@ -1,4 +1,4 @@
-changeLogFile: ./changelog.sql
+changeLogFile: sql/changelog.sql
 driver: com.mysql.cj.jdbc.Driver
 url: jdbc:mysql://sealights-prod.cuoym6z6de1k.us-east-1.rds.amazonaws.com:3306/sealights
 username: admin
