--- a/sql/qa.liquibase.properties
+++ b/sql/qa.liquibase.properties
@@ -1,6 +1,6 @@
 changeLogFile: sql/changelog.sql
 driver: com.mysql.cj.jdbc.Driver
-url: jdbc:mysql://sealights-prod.cuoym6z6de1k.us-east-1.rds.amazonaws.com:3306/sealights
+url: jdbc:mysql://sealights-qa.cuoym6z6de1k.us-east-1.rds.amazonaws.com:3306/sealights
 username: admin
 password: K5NWfomNIyQ86Ijs28zU
 referenceDriver: com.mysql.cj.jdbc.Driver
